Fix spacing between body paragraphs.

--- a/scss/partials/_fullscreen_post.scss
+++ b/scss/partials/_fullscreen_post.scss
@@ -238,7 +238,7 @@ div.fullscreen-post-container {
             margin-top: 32px;
 
             p:not(:last-child) {
-              padding: 0 0 32px;
+              margin: 0 0 16px;
             }
 
             div.carrot-no-preview, a.carrot-no-preview {
